fix home spacing

--- a/nomnomnom.css
+++ b/nomnomnom.css
@@ -393,6 +393,10 @@ a:hover {
     margin: 0 10px 15px 10px;
   }
 
+  #content > section:not(.section-header):first-child {
+    margin: 10px;
+  }
+
   #content h1 {
     font-size: 1.5em;
   }
